--- a/inddex.html
+++ b/inddex.html
@@ -7,10 +7,12 @@
     <title>Penguin Fashion</title>
     <!-- tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
+   
 
 </head>
 <body>
     <h1 class="text-6lx flex text-c">Penguin Fashion</h1>
     <h3 class="text-3xl">More text here</h3>
+    <p class="bg-green-300">Some text</p>
 </body>
 </html>
