--- a/inddex.html
+++ b/inddex.html
@@ -11,8 +11,19 @@
 
 </head>
 <body>
-    <h1 class="text-6lx flex text-c">Penguin Fashion</h1>
-    <h3 class="text-3xl">More text here</h3>
-    <p class="bg-green-300">Some text</p>
+    <header class="container mx-auto">
+        <!-- nav -->
+        <!-- banner -->
+        <div>
+            
+        </div>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
