--- a/inddex.html
+++ b/inddex.html
@@ -15,7 +15,12 @@
         <!-- nav -->
         <!-- banner -->
         <div>
-            
+            <div>
+                <h1 class="text-7xl">Be The Penguin  Of Winter</h1>
+            </div>
+            <div>
+                <img src="images/model.png" alt="">
+            </div>
         </div>
 
     </header>
