--- a/inddex.html
+++ b/inddex.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,21 @@
     <title>Penguin Fashion</title>
     <!-- tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
-   
+
 
 </head>
+
 <body>
     <header class="container mx-auto">
         <!-- nav -->
         <!-- banner -->
         <div>
             <div>
-                <h1 class="text-7xl">Be The Penguin  Of Winter</h1>
+                <h1 class="text-7xl font-semibold uppercase">
+                    Be The Penguin
+                    <br>
+                    Of Winter
+                </h1>
             </div>
             <div>
                 <img src="images/model.png" alt="">
@@ -28,7 +34,8 @@
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
