--- a/inddex.html
+++ b/inddex.html
@@ -19,10 +19,12 @@
         <div>
             <div>
                 <h1 class="text-7xl font-semibold uppercase">
-                    Be The Penguin
+                    <span class="text-amber-400">Be The Penguin</span>
                     <br>
                     Of Winter
                 </h1>
+                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, in</p>
+                <butto class="py-4 text-white uppercase bg-gradient-to-r from-[#A4BC46] to-[#85A019]">BUY NOW</button>
             </div>
             <div>
                 <img src="images/model.png" alt="">
