--- a/inddex.html
+++ b/inddex.html
@@ -16,8 +16,8 @@
     <header class="container mx-auto">
         <!-- nav -->
         <!-- banner -->
-        <div>
-            <div>
+        <div class="flex justify-center item-center mt-12">
+            <div class="space-y-6">
                 <h1 class="text-7xl font-semibold uppercase">
                     <span class="text-amber-400">Be The Penguin</span>
                     <br>
