--- a/inddex.html
+++ b/inddex.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <header class="container mx-auto">
+    <header class=" bg-amber-100">
         <!-- nav -->
         <!-- banner -->
-        <div class="flex justify-center item-center mt-12">
+        <div class="container mx-auto py-12 flex justify-center item-center mt-12">
             <div class="space-y-6">
                 <h1 class="text-7xl font-semibold uppercase">
                     <span class="text-amber-400">Be The Penguin</span>
