--- a/inddex.html
+++ b/inddex.html
@@ -16,8 +16,8 @@
     <header class=" bg-amber-100">
         <!-- nav -->
         <!-- banner -->
-        <div class="container mx-auto py-12 flex justify-center item-center mt-12">
-            <div class="space-y-6">
+        <div class="container mx-auto py-12 md:flex justify-center item-center mt-12">
+            <div class="space-y-6 px-4">
                 <h1 class="text-7xl font-semibold uppercase">
                     <span class="text-amber-400">Be The Penguin</span>
                     <br>
@@ -30,13 +30,15 @@
                   BUY NOW</button>
             </div>
             <div>
-                <img src="images/model.png" alt="">
+                <img class="w-3/4 md:m-full" src="images/model.png" alt="">
             </div>
         </div>
 
     </header>
     <main>
-
+        <section class="mt-32">
+            <h2 class="text-5xl font-semibold uppercase">Woman Jacket</h2>
+        </section>
     </main>
     <footer>
 
