--- a/inddex.html
+++ b/inddex.html
@@ -35,8 +35,8 @@
         </div>
 
     </header>
-    <main>
-        <section class="mt-32">
+    <main class="container mx-auto">
+        <section class="mt-12">
             <h2 class="text-5xl font-semibold uppercase">Woman Jacket</h2>
         </section>
     </main>
