--- a/inddex.html
+++ b/inddex.html
@@ -36,8 +36,15 @@
 
     </header>
     <main class="container mx-auto">
+        <!-- woman jacket section -->
         <section class="mt-12">
             <h2 class="text-5xl font-semibold uppercase">Woman Jacket</h2>
+            <div>
+                <!-- jacket card -->
+                <div>
+                    <img src="images/jacket-1.png" alt="">
+                </div>
+            </div>
         </section>
     </main>
     <footer>
