--- a/inddex.html
+++ b/inddex.html
@@ -8,6 +8,18 @@
     <title>Penguin Fashion</title>
     <!-- tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+                price: '#FABE4C',
+              }
+            }
+          }
+        }
+      </script>
 
 
 </head>
@@ -41,8 +53,22 @@
             <h2 class="text-5xl font-semibold uppercase">Woman Jacket</h2>
             <div>
                 <!-- jacket card -->
-                <div>
-                    <img src="images/jacket-1.png" alt="">
+                <div class="rounded-2xl">
+                    <div class="bg-slate-100 p-4 rounded-2xl">
+                        <img src="images/jacket-1.png" alt="">
+                    </div>
+                    <div>
+                        <h3 class="tex-2xl">Yellow Coat Jacket </h3>
+                        <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis veritatis necessitatibus mollitia itaque maiores dolorum enim eum quasi atque possimus</p> -->
+                        <div class="flex justify-between">
+                            <h2 class="text 4xl font-semibold text-price">$234</h2>
+                            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, in</p>
+                            <button class="py-4 px-8 rounded-lg text-white uppercase bg-gradient-to-r from-[#A4BC46] to-[#85A019]"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="w-6 h-6 inline">
+                                <path strokeLinecap="round" strokeLinejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                              </svg>
+                              BUY NOW</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
