--- a/inddex.html
+++ b/inddex.html
@@ -51,9 +51,9 @@
         <!-- woman jacket section -->
         <section class="mt-12">
             <h2 class="text-5xl font-semibold uppercase">Woman Jacket</h2>
-            <div>
-                <!-- jacket 2 card -->
-                <div class="rounded-2xl drop-shadow-xl">
+            <div class="grid md:grid-cols-1 lg:grid-cols-2 grid-cols-3 gap-8">
+                <!-- jacket 1 card -->
+                <div class="rounded-2xl p-4 drop-shadow-xl">
                     <div class="bg-slate-100 p-4 rounded-2xl">
                         <img src="images/jacket-1.png" alt="">
                     </div>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <!-- jacket 2 card -->
-                <div class="rounded-2xl drop-shadow-xl">
+                <div class="rounded-2xl p-4 drop-shadow-xl">
                     <div class="bg-slate-100 p-4 rounded-2xl">
                         <img src="images/jacket-2.png" alt="">
                     </div>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <!-- jacket 3 card -->
-                <div class="rounded-2xl drop-shadow-xl">
+                <div class="rounded-2xl p-4 drop-shadow-xl">
                     <div class="bg-slate-100 p-4 rounded-2xl">
                         <img src="images/jacket-3.png" alt="">
                     </div>
