--- a/inddex.html
+++ b/inddex.html
@@ -176,6 +176,35 @@
     <footer>
 
     </footer>
+    <section class="grid grid-cols-2 gap-5">
+        <div class="bg-slate-200 h-32 flex p-6 rounded-2xl shadow-2xl">
+            <img class="h-20 w-20" src="images/house.png" alt="">
+            <div>
+                <h3 class="text-2xl">Find the Perfect Fit</h3>
+                <p>Everybody is different, which is why we
+                    offer styles for every body.</p>
+            </div>
+        </div>
+        <div class="bg-slate-200 row-span-3">
+            <img src="images/shopping.png" alt="">
+        </div>
+        <div class="bg-slate-200 h-32 flex p-6 rounded-2xl shadow-2xl">
+            <img class="h-20 w-20" src="images/house.png" alt="">
+            <div>
+                <h3 class="text-2xl">Find the Perfect Fit</h3>
+                <p>Everybody is different, which is why we
+                    offer styles for every body.</p>
+            </div>
+        </div>
+        <div class="bg-slate-200 h-32 flex p-6 rounded-2xl shadow-2xl">
+            <img class="h-20 w-20" src="images/house.png" alt="">
+            <div>
+                <h3 class="text-2xl">Find the Perfect Fit</h3>
+                <p>Everybody is different, which is why we
+                    offer styles for every body.</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
